--- a/源码/ling-bbs-web/src/main/resources/application.yml
+++ b/源码/ling-bbs-web/src/main/resources/application.yml
@@ -59,7 +59,7 @@ log:
 
 # 项目路径配置
 project:
-  folder: D:/ling-bbs-folder/web   # 项目文件路径
+  folder: E:/ling-bbs-folder/web   # 项目文件路径
 
 # 开发环境标识
 isDev: true
